--- a/assignment_1-1.ipynb
+++ b/assignment_1-1.ipynb
@@ -11,6 +11,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc9dc1be",
+   "metadata": {},
+   "source": [
+    "Name: Aiden Rocha\n",
+    "Computing Id: atx2xs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "7e919767",
